Jquery not working
Help me figure it out.  I have it set up to change the color of the
header when you highlight it.  Not sure what I did wrong.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<script type='text/javascript' src='script.js'></script>
 		<title>Greg Rubin's Resume</title>
 	</head>
 	<body>
@@ -38,7 +39,7 @@
                 <li>Guided employees to create individual development plans</li>
                 <li>Audited client business with their banking needs to lower costs</li>
                 <li>Attained sales targets for branch</li>
-                <li>Analyzed customer’s finances to expand asset allocation</li>
+                <li>Analysed customer’s finances to expand asset allocation</li>
                 <li>Reviewed client mortgages to create refinancing options</li>
             </ul>
         </p>
