--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<script type='text/javascript' src='script.js'></script>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+		 <script type='text/javascript' src='script.js'></script>
 		<title>Greg Rubin's Resume</title>
 	</head>
 	<body>
@@ -39,7 +40,7 @@
                 <li>Guided employees to create individual development plans</li>
                 <li>Audited client business with their banking needs to lower costs</li>
                 <li>Attained sales targets for branch</li>
-                <li>Analysed customer’s finances to expand asset allocation</li>
+                <li>Analyzed customer’s finances to expand asset allocation</li>
                 <li>Reviewed client mortgages to create refinancing options</li>
             </ul>
         </p>
